c++ logs fed into log window now

--- a/chip-8-emulator/Makefile
+++ b/chip-8-emulator/Makefile
@@ -1,7 +1,7 @@
 EMCC=emcc
 SRC=src/main.cpp src/chip8.cpp
 OUT=chip8.js
-CXXFLAGS=-s EXPORTED_FUNCTIONS='["_loadROM", "_emulateCycle", "_getDisplay", "_malloc", "_free"]' -s EXPORTED_RUNTIME_METHODS='["ccall", "cwrap", "getValue", "setValue"]' -s USE_SDL=2 --preload-file roms
+CXXFLAGS=-s EXPORTED_FUNCTIONS='["_loadROM", "_emulateCycle", "_getDisplay", "_malloc", "_free"]' -s EXPORTED_RUNTIME_METHODS='["ccall", "cwrap", "getValue", "setValue", "print", "printErr"]' -s USE_SDL=2 --preload-file roms
 
 all:
 	$(EMCC) $(SRC) -o $(OUT) $(CXXFLAGS)
